# robo-shooter

./: index.html  params.json
OptiTrack/src/: exampleCode.cpp
catkin_ws/src/IIWA/: CMakeLists.txt  package.xml
catkin_ws/src/IIWA/include/: IIWARobot.h  Trajectory_nlp.hpp
catkin_ws/src/IIWA/src/: IIWARobot.cpp  README.txt  Trajectory_nlp.cpp  Trajectory_nlp.cpp~  Trajectory_nlp.hpp~  iiwa.xml  iiwaCfg.xml  main.cpp  main.cpp~
mavlink/: CMakeLists.txt  main.cpp
